[tool.poetry]
name = "retroarcherreddit-bot"
version = "0.0.1"
description = ""
authors = ["ReenigneArcher <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "7.6.0"
Flask = "2.1.1"
libgravatar = "1.0.0"
python-dotenv = "0.20.0"
requests = "2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
