[tool.poetry]
name = "lizardbyte-bot"
version = "0.0.1"
description = ""
authors = ["ReenigneArcher <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "7.6.0"
Flask = "2.2.2"
libgravatar = "1.0.0"
python-dotenv = "0.21.0"
requests = "2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
