[tool.poetry]
name = "lizardbyte-bot"
version = "0.0.1"
description = ""
authors = ["ReenigneArcher <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "7.6.0"
Flask = "2.2.3"
libgravatar = "1.0.3"
python-dotenv = "0.21.1"
requests = "2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
